# reviewkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: gumroad-description.md  reddit-post.md
reviewkit/: __init__.py  __main__.py  analyzer.py  cli.py  github.py  pro.py  reporters.py
tests/: test_analyzer.py
